<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@color/background"
	android:orientation="horizontal"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout
		android:orientation="vertical"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:layout_gravity="bottom">
		<ListView
			android:id="@android:id/list"
			android:layout_width="wrap_content"
			android:layout_height="285dip" />
		<Button
			android:id="@+id/new_pizza_button"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginRight="30dip"
			android:layout_marginLeft="30dip"
			android:text="@string/new_pizza_label" />
		<Button
			android:id="@+id/edit_order_button"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginRight="30dip"
			android:layout_marginLeft="30dip"
			android:text="@string/edit_order_label" />
		<Button
			android:id="@+id/checkout_button"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginRight="30dip"
			android:layout_marginLeft="30dip"
			android:text="@string/checkout_label" />
	</LinearLayout>
</LinearLayout>